--- a/src/index.css
+++ b/src/index.css
@@ -224,3 +224,12 @@ code {
   margin-left: 0px;
   margin-right: 0px;
 }
+
+.rules {
+  color: white;
+  margin-top: 15px;
+  padding: 10px 110px;
+  background-color: #52b4e8;
+  width: 100%;
+  border-radius: 10px;
+}
